# working-materials-copy

./: README.md
additionally/Знакомство с LangSmith, менеджмент состояний в LangGraph, контекст и иерархия/source/: README.md
code/week-1/1-day/: student_scores.csv
code/week-1/1-day/forCursor/: README.md
code/week-1/1-day/prompting/: best_practices_prompting.md  examples_prompts.md  prompt_elements.md  prompting_basics.md  recommendations_for_developing_prompts.md  settings_llm.md
code/week-1/2-day/go/: .env.example  go.mod  main.go
code/week-1/2-day/python/: .env.example  README.md
code/week-1/3-day/: prompt.md
code/week-2/4-day/python/: .env.example  1_solar.py  2_bulgakov.py  3.1_load_from_github.py  3.2_create_exam.py  4_extract_from_google_docs.py  5_web_cache.py  6_get_files_from_drive.py  7_hugging_face_embeddings_models_example.py  README.md  pyproject.toml
code/week-2/4-day/python/data/: first_day.txt  solar_ru.txt  solar_system.txt
code/week-2/4-day/python/exams/: assessment-2-happy-farm.md  assessment-2-jays-msk.md  assessment-2-whales-msk.md  assessment-2-whales-spb.md  assessment-2a.md  assessment-2b.md  assessment-2c-msk.md  assessment-2c.md  assessment-2d.md  assessment-2f.md  assessment-2g.md  assessment-2h.md  assessment-2i.md  assessment-2j-reworked.md  assessment-2j.md  assessment-2k-msk.md  assessment-2k-tests.md  assessment-2k.md  assessment-2l.md  assessment-2m.md  assessment-2n.md  assessment-2o.md  assessment-2r-csr.md  assessment-2r.md  assessment-2s.md  assessment-2t.md  assessment-2w.md
code/week-3/7-day/python/: .env.example  (+6 more)
(+266 files in other folders)
